--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			margin: 40px 70px;
 		}
 		h2{
-			font-size:14px;
+			font-size:16px;
+			font-family: sans-serif;
 		}
 	</style>
 </head>
@@ -27,8 +28,9 @@
 	
 	<div class="wrapper">
 		<div class="center">
+			<h2>wapuu</h2>
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-267 387.8900146 60 66" enable-background="new -267 387.8900146 60 66" xml:space="preserve" width="600">
+	 viewBox="-267 387.8900146 60 66" enable-background="new -267 387.8900146 60 66" xml:space="preserve" width="600" id="wapuu">
 <g id="outline">
 	<path id="Fill-1_1_" d="M-208.7421265,391.5451965c-0.3692322-0.0919189-0.9713593-0.136261-3.3923035-0.136261
 		c-0.7817841,0-1.6704254,0.0046082-2.6151581,0.0092163c-1.0665131,0.0053406-2.2050934,0.0110168-3.3415375,0.0110168
